--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.timer {
+    font-size: 64px;
+}
+
 .answer-button {
     width: 150px;
     height: 150px;
